src/objects/Apttus_Config2__OrderLineItem__c/fields/License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry_Date__c</fullName>
    <formula>IF(ISBLANK(Apttus_Config2__EndDate__c),&apos;&apos;,
    IF(AND(ISNULL(Apttus_Config2__OptionId__c),ISNULL(Apttus_Config2__ProductId__c)), &apos;&apos;,

       IF(AND(ISBLANK(TEXT(Apttus_Config2__OptionId__r.Term__c)),ISNULL(Apttus_Config2__OptionId__c),ISBLANK(TEXT(Apttus_Config2__ProductId__r.Term__c))), &apos;&apos;,
           IF(AND(NOT(ISNULL(Apttus_Config2__OptionId__c)),NOT(ISBLANK(TEXT(Apttus_Config2__OptionId__r.Term__c))),ISPICKVAL(Apttus_Config2__OptionId__r.Term__c, &apos;1 year&apos;),NOT(ISPICKVAL(Apttus_Config2__OptionId__r.License_Type__c,&apos;APU&apos;))), TEXT(ADDMONTHS(Apttus_Config2__EndDate__c,12)) ,
               IF(AND(NOT(ISNULL(Apttus_Config2__OptionId__c)),NOT(ISBLANK(TEXT(Apttus_Config2__OptionId__r.Term__c))),ISPICKVAL(Apttus_Config2__OptionId__r.Term__c, &apos;Indefinite&apos;),NOT(ISPICKVAL(Apttus_Config2__OptionId__r.License_Type__c,&apos;APU&apos;))),&apos;Unlimited&apos;,
                   IF(AND(NOT(ISNULL(Apttus_Config2__OptionId__c)),ISBLANK(TEXT(Apttus_Config2__OptionId__r.Term__c))),&apos;&apos;,

                      IF(AND(ISNULL(Apttus_Config2__OptionId__c),NOT(ISBLANK(TEXT(Apttus_Config2__ProductId__r.Term__c))),ISPICKVAL(Apttus_Config2__ProductId__r.Term__c, &apos;1 year&apos;),NOT(ISPICKVAL(Apttus_Config2__OptionId__r.License_Type__c,&apos;APU&apos;))), TEXT(ADDMONTHS(Apttus_Config2__EndDate__c,12)),
                          IF(AND(ISNULL(Apttus_Config2__OptionId__c),NOT(ISBLANK(TEXT(Apttus_Config2__ProductId__r.Term__c))),ISPICKVAL(Apttus_Config2__ProductId__r.Term__c, &apos;Indefinite&apos;),NOT(ISPICKVAL(Apttus_Config2__OptionId__r.License_Type__c,&apos;APU&apos;))), &apos;Unlimited&apos;,
                              IF(AND(ISNULL(Apttus_Config2__OptionId__c),ISBLANK(TEXT(Apttus_Config2__ProductId__r.Term__c))), &apos;&apos;,
&apos;&apos;
                        )
                       )
                      )
                    )
                )
             )
         )
      )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Expiry Date</label>
    <type>Text</type>
</CustomField>