src/objects/Apttus_Config2__OrderLineItem__c/fields/License_Required_and_Linked__c.field-meta.xml
<CustomField>
    <fullName>License_Required_and_Linked__c</fullName>
    <label>License Required and Linked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>